using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;

namespace Assets.Scripts.classes {
    public static class triggers {
        public const String SWIPEDOWN = "SwipeDown";
        public const String SWIPEIN = "SwipeIn";
        public const String SWIPEUP = "SwipeUp";
        public const String NEWHIGHSCORE = "NewHighscore";
    }
}
